clusters/artemis/kubernetes/apps/external-endpoints/services/app/forgejo/tcproute.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/gateway.networking.k8s.io/tcproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: TCPRoute
metadata:
  name: forgejo-ssh
  annotations:
    gatus.home-operations.com/enabled: "false"
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: ListenerSet
      name: forgejo-ssh
      sectionName: ssh
  rules:
    - backendRefs:
        - name: forgejo-ssh
          port: 22
